plugins {
    id 'java'
    id 'jacoco'
    id 'groovy'
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        groovy {
            srcDir 'src/main/groovy'
        }
        resources {
            srcDir 'src/main/rescources'
        }
    }
}

group 'io.github.mizinchik'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(16)
    }
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}